dev: pin workflow ubuntu versions to 22.04

--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   luacheck:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Install Packages
       run: sudo apt-get install $PACKAGES
@@ -22,7 +22,7 @@ jobs:
       run: luacheck .
 
   runtests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Install Packages
       run: sudo apt-get install $PACKAGES
